Implement writer-shard suspend/reactivate mechanism for scale-to-zero
Research into core (ExistingShardsAllocator.removeAndIgnore, TransportReplicationAction's
existing ClusterStateObserver retry loop) showed the mechanism needs no core diff, contrary
to the RFC's original framing. SuspendedShardAllocationDecider (canAllocate+canRemain NO)
plus ShardSuspensionCoordinator (explicit CancelAllocationCommand, since canRemain alone
never force-unassigns a shard with no valid target) suspends idle writers; a new
TransportClusterManagerNodeAction-based ReactivateShardsAction, triggered by
ShardReactivationActionFilter on the next write/query, reactivates them. Gated behind a
separate scale_to_zero.suspend_enabled setting so enabling the existing eval_interval alone
stays observation-only. Verified end-to-end with a real cluster integration test plus a full
regression sweep.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>